--- a/themes/custom/layouts/partials/head/css.html
+++ b/themes/custom/layouts/partials/head/css.html
@@ -11,13 +11,12 @@
       {{- end }}
   {{- end }}
 {{- end }}
-{{- $faFiles := slice "fontawesome" "brands" "solid" }}
-{{- range $faFiles }}
-  {{- $name := printf "css/%s.css" . }}
-  {{- if eq hugo.Environment "production" }}
-    {{- $name = printf "css/%s.min.css" . }}  
-  {{- end }}
-  {{- with resources.Get $name }}
-    <link rel="stylesheet" href="{{ .RelPermalink }}" />
-  {{- end }}
+{{- if eq hugo.Environment "development" }}
+  <link rel="stylesheet" href="/css/fontawesome.css" />
+  <link rel="stylesheet" href="/css/brands.css" />
+  <link rel="stylesheet" href="/css/solid.css" />
+{{- else }}
+  <link rel="stylesheet" href="/css/fontawesome.min.css" />
+  <link rel="stylesheet" href="/css/brands.min.css" />
+  <link rel="stylesheet" href="/css/solid.min.css" />
 {{- end }}
