--- a/themes/custom/layouts/partials/navbar.html
+++ b/themes/custom/layouts/partials/navbar.html
@@ -1,47 +1,15 @@
 <header class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
-  <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap">
-    <a class="navbar-brand" href="#">JohanHendrikEhlers.com</a>
+  <nav class="container-lg bd-gutter flex-wrap flex-lg-nowrap">
+    <a class="navbar-brand" href="#">Johan Hendrik Ehlers</a>
     <button
       class="navbar-toggler"
       type="button"
       data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasNavbar"
-      aria-controls="offcanvasNavbar"
+      data-bs-target="#contentMenu"
+      aria-controls="contentMenu"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div
-      class="offcanvas offcanvas-end"
-      tabindex="-1"
-      id="offcanvasNavbar"
-      aria-labelledby="offcanvasNavbarLabel"
-    >
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="offcanvas-body">
-        {{ partial "navbar-nav.html" (dict "menuID" "main" "page" .) }}
-        <!--
-          <form class="d-flex mt-3" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        -->
-      </div>
-    </div>
   </nav>
 </header>
