--- a/themes/custom/assets/css/main.sass
+++ b/themes/custom/assets/css/main.sass
@@ -1,10 +1,10 @@
-// Custom.scss
-// Option A: Include all of Bootstrap
-
-// Include any default variable overrides here (though functions won't be available)
+// Imports
 
 @import "bootstrap"
-
-// Then add additional custom code here
-
 @import "partials/menu"
+
+// Global styles
+
+body
+    background-image: url('/background.svg')
+    background-repeat: repeat
