--- a/themes/custom/layouts/_default/baseof.html
+++ b/themes/custom/layouts/_default/baseof.html
@@ -10,7 +10,7 @@
     {{ partial "navbar.html" . }}
     <div class="container">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-2 mt-4">
           <div
             id="contentMenu"
             class="offcanvas-lg offcanvas-start"
@@ -31,15 +31,30 @@
             </div>
           </div>
         </div>
-        <main class="col-lg-6">{{ block "main" . }}{{ end }}</main>
-        <div class="col-lg-3">
-          <h1>A quick summary of this page:</h1>
+        <main class="col-lg-8">
+          <div class="bg-white mt-3 px-5 py-4 pe-5 rounded">
+            {{ block "main" . }}{{ end }}
+          </div>
+        </main>
+        <div class="col-lg-2 mt-4">
+          <h6>A quick summary of this page:</h6>
           Hier könnte Ihre Werbung stehen.
         </div>
       </div>
     </div>
     <footer>
-      {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 offset-lg-2">
+            <div>
+              {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+            </div>
+            <p class="text-center">
+              &copy; {{ now.Format "2006" }} {{ .Site.Title }}
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
