--- a/themes/custom/layouts/_default/home.html
+++ b/themes/custom/layouts/_default/home.html
@@ -1,8 +1,5 @@
-{{ define "main" }}
-<h1>{{ .Title }}</h1>
-  {{ .Content }}
-  {{ range site.RegularPages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
-{{ end }}
+{{ define "main" }} {{ .Content }} {{ range site.RegularPages }}
+<h5 class="text-muted">{{ .LinkTitle }}</h5>
+{{ .Summary }}
+<a href="{{ .RelPermalink }}"> Read More</a>
+{{ end }} {{ end }}
